# gxp-guider

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.1panel.yml  docker-compose.yml  logging_config.py  pyproject.toml  run.py  start.sh
app/: __init__.py
app/admin/: __init__.py  views.py
app/api/: views.py
app/auth/: forms.py  views.py
app/content/: organizations.md  organizations_en.md
app/main/: views.py
app/models/: __init__.py  category.py  document.py  download_stat.py  organization.py  user.py
app/static/css/: custom.css
app/static/js/: blur-thumbnail.js
app/templates/: 404.html  500.html  base.html  document_detail.html  documents.html  download_history.html  index.html  organizations_intro.html
app/templates/admin/: export_documents.html  index.html  upload_document.html
app/templates/admin/categories/: create.html  list.html
app/templates/admin/documents/: create.html  edit.html
app/templates/admin/documents/partials/: scripts.html  styles.html  uploads.html
app/templates/auth/: change_password.html  edit_profile.html  login.html  profile.html  register.html
app/utils/: markdown.py  pdf_preview.py  r2.py  upload.py
crawler/: __init__.py  apic.py  fda-guidance.py  ispe.py  pda.py  simple_test-copy.py  translator.py  who.py
data/: apic_documents.csv  fda_guidance_documents.csv  ispe_documents.csv  pda_documents.csv  price_list.xlsx.example  who_documents.csv
scripts/: __init__.py  backup.py  import_new_documents.py  init_db.py  manage.py
